# etc2comp

./: BUILD.bazel  CMakeLists.txt  WORKSPACE  cxx.bzl
EtcLib/: BUILD.bazel  CMakeLists.txt
EtcLib/Etc/: Etc.cpp  Etc.h  EtcColor.h  EtcColorFloatRGBA.h  EtcConfig.h  EtcExecutor.cpp  EtcExecutor.h  EtcFilter.cpp  EtcFilter.h  EtcImage.cpp  EtcImage.h  EtcMath.h
EtcLib/EtcCodec/: EtcBlock4x4.cpp  EtcBlock4x4.h  EtcBlock4x4Encoding.cpp  EtcBlock4x4Encoding.h  EtcBlock4x4EncodingBits.h  EtcBlock4x4Encoding_ETC1.cpp  EtcBlock4x4Encoding_ETC1.h  EtcBlock4x4Encoding_R11.cpp  EtcBlock4x4Encoding_R11.h  EtcBlock4x4Encoding_RG11.cpp  EtcBlock4x4Encoding_RG11.h  EtcBlock4x4Encoding_RGB8.cpp  EtcBlock4x4Encoding_RGB8.h  EtcBlock4x4Encoding_RGB8A1.cpp  EtcBlock4x4Encoding_RGB8A1.h  EtcBlock4x4Encoding_RGBA8.cpp  EtcBlock4x4Encoding_RGBA8.h  EtcDifferentialTrys.cpp  EtcIndividualTrys.cpp  EtcSortedBlockList.cpp
EtcLib/EtcThreaded/: EtcThreadedExecutor.cpp  EtcThreadedExecutor.h
EtcLibTest/: BUILD.bazel  EtcBlock4x4Test.cpp  EtcThreadedExecutorTest.cpp
EtcTool/: BUILD.bazel  CMakeLists.txt  EtcAnalysis.cpp  EtcAnalysis.h  EtcComparison.cpp  EtcComparison.h  EtcFile.cpp  EtcFileHeader.cpp  EtcFileHeader.h  EtcMemTest.h  EtcSourceImage.cpp  EtcTool.cpp
EtcToolTest/: BUILD.bazel  EtcToolTest.go  EtcToolTest.py  expected
tools/: bazel.rc
