
load("//:cxx.bzl", "cxx_library")

cxx_library(
    name = "EtcLibBase",
    hdrs = [
        "Etc/Etc.h",
        "Etc/EtcColor.h",
        "Etc/EtcColorFloatRGBA.h",
        "Etc/EtcConfig.h",
        "Etc/EtcImage.h",
        "Etc/EtcExecutor.h",
        "EtcCodec/EtcBlock4x4.h",
        "EtcCodec/EtcBlock4x4Encoding.h",
        "EtcCodec/EtcBlock4x4EncodingBits.h",
        "EtcCodec/EtcErrorMetric.h",
        "EtcCodec/EtcSortedBlockList.h",
    ],
    srcs = [
        "Etc/EtcExecutor.cpp",
        "EtcCodec/EtcSortedBlockList.cpp",
    ],
    includes = [
        "Etc",
        "EtcCodec",
    ],
)

cxx_library(
    name = "EtcLibThreaded",
    hdrs = [
        "EtcThreaded/EtcThreadedExecutor.h",
    ],
    srcs = [
        "EtcThreaded/EtcThreadedExecutor.cpp",
    ],
    includes = [
        "EtcThreaded",
    ],
    deps = [
        ":EtcLibBase",
    ],
    linkopts = [
        "-lpthread",
    ],
)

cxx_library(
    name = "EtcLib",
    hdrs = [
        "Etc/EtcFilter.h",
        "Etc/EtcMath.h",
        "EtcCodec/EtcDifferentialTrys.h",
        "EtcCodec/EtcIndividualTrys.h",
        "EtcCodec/EtcBlock4x4Encoding_ETC1.h",
        "EtcCodec/EtcBlock4x4Encoding_R11.h",
        "EtcCodec/EtcBlock4x4Encoding_RG11.h",
        "EtcCodec/EtcBlock4x4Encoding_RGB8.h",
        "EtcCodec/EtcBlock4x4Encoding_RGB8A1.h",
        "EtcCodec/EtcBlock4x4Encoding_RGBA8.h",
    ],
    srcs = [
        "Etc/EtcFilter.cpp",
        "Etc/EtcMath.cpp",
        "Etc/Etc.cpp",
        "Etc/EtcImage.cpp",
        "EtcCodec/EtcDifferentialTrys.cpp",
        "EtcCodec/EtcIndividualTrys.cpp",
        "EtcCodec/EtcBlock4x4Encoding.cpp",
        "EtcCodec/EtcBlock4x4.cpp",
        "EtcCodec/EtcBlock4x4Encoding_ETC1.cpp",
        "EtcCodec/EtcBlock4x4Encoding_R11.cpp",
        "EtcCodec/EtcBlock4x4Encoding_RG11.cpp",
        "EtcCodec/EtcBlock4x4Encoding_RGB8.cpp",
        "EtcCodec/EtcBlock4x4Encoding_RGB8A1.cpp",
        "EtcCodec/EtcBlock4x4Encoding_RGBA8.cpp",
    ],
    deps = [
        ":EtcLibThreaded",
    ],
    visibility = [
        "//EtcLibTest:__subpackages__",
        "//EtcTool:__subpackages__",
    ],
)
