
load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "EtcToolTest",
    srcs = [
        "EtcToolTest.go",
    ],
    args = [
        "$(location //EtcTool)",
        "$(location @com_github_openimageio_oiio_images//:oiio-logo-with-alpha.png)",
        "$(location expected)",
    ],
    data = [
        "@com_github_openimageio_oiio_images//:oiio-logo-with-alpha.png",
        "//EtcTool",
        "expected",
    ],
    visibility = ["//visibility:public"],
)
